# rust-key-ownership

./: .clippy.toml  .env  .rustfmt.toml  .rusty-hook.toml  Cargo.toml  LICENSE  README.md  justfile  log_policy.md
holder/: Cargo.toml
holder/src/: config.rs  main.rs
shared/: Cargo.toml
shared/src/: crypto.rs  error.rs  lib.rs  types.rs
verifier/: Cargo.toml
verifier/src/: apidoc.rs  lib.rs  main.rs  state.rs
verifier/src/handlers/: error.rs  mod.rs  verify_handler_request.rs
verifier/tests/: integration.rs
