[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
validator = { version = "0.16", features = ["derive"] }
chrono = "0.4"
utoipa = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = { version = "2.0.0-pre.1", features = ["serde", "rand_core"] }
rand = "0.8"
thiserror = { workspace = true }
base64 =  { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }