[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
validator = { workspace = true }
utoipa = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared = { path = "../shared" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
verifier = { path = "." }
uuid = { workspace = true }
chrono = { workspace = true }
base64 =  { workspace = true }